mobile: up sojourner

--- a/content/schedule/mobile.html
+++ b/content/schedule/mobile.html
@@ -20,6 +20,21 @@ It is pretty hefty (a bit over 600kb in size) but includes everything when fetch
 </p>
 UNFINISHED!! -->
 
+<h3>Apps for Mobile Devices, tested for 2015</h3>
+<ul>
+<li><b>N900: Sojourner</b><br />
+    <a href="https://github.com/loomchild/sojourner">Website and source code</a>,<br />
+    Available for Maemo in <a href="http://maemo.org/packages/view/sojourner/">extras-devel</a>,<br />
+    Available as direct <a href="https://github.com/loomchild/sojourner/releases/download/v0.3.1/sojourner_0.3.1_all.deb">deb package</a>
+</li>
+</ul>
+
+<p>
+Others? Or tested one of the below for this year? Let us know on our mailinglist: <a href="mailto:fosdem@lists.fosdem.org">fosdem@lists.fosdem.org</a>.
+</p>
+
+<hr />
+
 <h3>Apps for Mobile Devices, tested for 2014</h3>
 <ul>
 <li><b>Android: FOSDEM Companion</b><br />
@@ -43,17 +58,7 @@ UNFINISHED!! -->
     Available from the <a href="https://play.google.com/store/apps/details?id=net.gaast.giggity">android market</a>,<br />
     Available from F-droid market, also has direct <a href="http://f-droid.org/repository/browse/?fdfilter=fosdem&fdid=net.gaast.giggity">apk download</a>.<br />
 </li>
-<li><b>N900: Sojourner</b><br />
-    <a href="http://fosdem.loomchild.net/sojourner_0.2.8_all.deb">deb package for 2014</a> (with fixup for https),<br />
-    <a href="http://willthompson.co.uk/sojourner/">Website</a>,<br />
-    <a href="http://gitorious.org/sojourner/">Original source code</a>,<br />
-    <a href="http://git.altlinux.org/people/thresh/public/sojourner.git">Clone for 2012.</a>
-</li>
 </ul>
-
-<p>
-Others? Or tested one of the below for this year? Let us know on our public mailinglist: <a href="mailto:fosdem@lists.fosdem.org">fosdem@lists.fosdem.org</a>.
-</p>
 
 <h3>Apps for Mobile Devices, tested for 2013</h3>
 <ul>
