beerevent: reflect this year's reality

--- a/content/beerevent.html
+++ b/content/beerevent.html
@@ -17,7 +17,7 @@ opportunity to taste some of the finest
     class="dtstart">
     <%= (days.first[:conference_day] - 1).strftime("%A, %e %B %Y") %>
   </span>
-  from 18:00(-ish) onwards, but feel free to join the party at any time of the
+  from 17:00(-ish) onwards, but feel free to join the party at any time of the
   evening.
   We will be there until the bar closes (well after midnight).
 </p>
@@ -45,37 +45,38 @@ opportunity to taste some of the finest
   selection available.
 </p>
 
-<h2>Beer Distribution Algorithm v3.2 (stable)</h2>
+<h2>Beer Distribution Algorithm v3.3 (stable)</h2>
 
 <p>
   After about ten years of incremental improvements to our notorious Beer
   Distribution Algorithm, we appear to have reached a stable version with the
-  algorithm used: v3.2.
+  algorithm used: v3.3.
   We have no changes to the algorithm to announce this year, at least up to
   now&mdash;if we change our mind, we will let you know you in time.
 </p>
 
 <h2>Security measures / access control</h2>
 <p>
-  We have reserved the ground floor of the bar as a private party for FOSDEM.
-  The Delirium Caf&eacute; has offered us an extra room so we will be able to
-  move around a bit easier.
-  Delirium Security will help us keep this area FOSDEM-only.
-  If you meet a guard at the entrance to the bar, make it clear to him that you
-  are there for the FOSDEM party.
-  Wearing appropriately geeky attire tends to do the trick, as does mentioning
-  the name FOSDEM.
+  We have reserved the ground floor of the bar (<em>Delirium Taphouse</em>) and
+  the first floor (<em>Hoppy Loft</em>) as a private party for FOSDEM.  The
+  Delirium Caf&eacute; has offered us an extra room so we will be able to move
+  around a bit easier.  Delirium Security will help us keep this area
+  FOSDEM-only.  If you meet a guard at the entrance to the bar, make it clear to
+  him that you are there for the FOSDEM party.  Wearing appropriately geeky
+  attire tends to do the trick, as does mentioning the name FOSDEM.
 </p>
 
 <h2>Beer Tokens</h2>
 <p>
-  Tokens are &euro;3 each.
+  Tokens are &euro;5 each or &euro;3 each if you buy ten or more at a time.
   One token, one beer.
   For the sake of simplicity, “soda” (cola, lemonade, etc) is beer too&mdash;at
   least as far as tokens are concerned.
   Tokens may be bought individually, but FOSDEM staff prefers to deal with paper
   money rather than metal money.
   It’s lighter and easier to sort.
+  FOSDEM tokens are also accepted at Floris Bar (across the alley from Delirium)
+  as well as in the basement.
 </p>
 
 <p>
@@ -115,6 +116,7 @@ opportunity to taste some of the finest
   have a conference to set up early in the morning), the tokens will be valid
   all night and after tokens run out, beer can be exchanged directly for cash
   too (same price).
+  From past experience, the bar is most crowded between 23:00 and 01:00.
 </p>
 
 <h2>A note of caution</h2>
