mobile apps update

--- a/content/schedule/mobile.html
+++ b/content/schedule/mobile.html
@@ -14,6 +14,16 @@ Ways to have the schedule with you at all times, without wasting trees:
     Available from the <a href="https://play.google.com/store/apps/details?id=be.digitalia.fosdem">android market</a>.<br />
     Available from F-droid market, also has direct <a href="http://f-droid.org/repository/browse/?fdid=be.digitalia.fosdem">apk download</a>.<br />
 </li>
+<li><b>Android: Giggity</b><br />
+    <a href="http://wilmer.gaa.st/main.php/giggity.html">Website and source code</a>,<br />
+    Available from the <a href="https://play.google.com/store/apps/details?id=net.gaast.giggity">android market</a>,<br />
+    Available from F-droid market, also has direct <a href="http://f-droid.org/repository/browse/?fdfilter=fosdem&fdid=net.gaast.giggity">apk download</a>.<br />
+</li>
+<li><b>QT-based (Desktops, Maemo5): confclerk</b><br />
+    <a href="http://www.toastfreeware.priv.at/confclerk">Website and source code</a>,<br />
+    Available in official Debian, Ubuntu and Maemo5 repositories,<br />
+    (the successor of <a href="http://sourceforge.net/projects/fosdem-maemo/">fosdem-maemo</a>).<br />
+</li>
 <li><b>N900: Sojourner</b><br />
     <a href="https://github.com/loomchild/sojourner">Website and source code</a>,<br />
     Available for Maemo in <a href="http://maemo.org/packages/view/sojourner/">extras-devel</a>,<br />
@@ -27,32 +37,13 @@ Others? Or tested one of the below for this year? Let us know on our mailinglist
 
 <hr />
 
-<h3>Apps for Mobile Devices, tested for 2014</h3>
+<h3>Apps for Mobile Devices, tested for 2014, unknown for 2015</h3>
 <ul>
-<li><b>QT-based (Desktops, Maemo5): confclerk</b><br />
-    <a href="http://www.toastfreeware.priv.at/confclerk">Website and source code</a>,<br />
-    Available in official Debian, Ubuntu and Maemo5 repositories,<br />
-    (the successor of <a href="http://sourceforge.net/projects/fosdem-maemo/">fosdem-maemo</a>).<br />
-</li>
 <li><b>Android: fosdem-android</b><br />
     <a href="https://sourceforge.net/projects/fosdem-android">Source code</a>,<br />
     <a href="https://github.com/rkallensee/fosdem-android">Github fork of 2013</a>,<br />
     Direct <a href="http://forge.webpresso.net/projects/fosdem-android/files">apk download</a>,<br />
     Available from <a href="https://play.google.com/store/apps/details?id=org.fosdem">the android market</a>.<br />
-</li>
-<li><b>Android: Giggity</b><br />
-    <a href="http://wilmer.gaa.st/main.php/giggity.html">Website and source code</a>,<br />
-    Available from the <a href="https://play.google.com/store/apps/details?id=net.gaast.giggity">android market</a>,<br />
-    Available from F-droid market, also has direct <a href="http://f-droid.org/repository/browse/?fdfilter=fosdem&fdid=net.gaast.giggity">apk download</a>.<br />
-</li>
-</ul>
-
-<h3>Apps for Mobile Devices, tested for 2013</h3>
-<ul>
-<li><b>WebOS: fosdem-webos</b><br />
-    <a href="http://forge.webpresso.net/projects/fosdem-webos">Website and source code</a>,<br />
-    Available from the <a href="https://developer.palm.com/appredirect/?packageid=net.webpresso.fosdem">HP App Catalog</a>,<br />
-    Direct <a href="http://forge.webpresso.net/attachments/download/33/net.webpresso.fosdem_0.2.11_all.ipk">ipk download</a>.<br />
 </li>
 <li><b>iPhone: fosdem-iphone</b><br />
     <a href="https://github.com/leonhandreke/fosdem">Source code</a>,<br />
@@ -60,9 +51,13 @@ Others? Or tested one of the below for this year? Let us know on our mailinglist
 </li>
 </ul>
 
-
-<h3>Apps for Mobile Devices, archive from 2012 and before</h3>
+<h3>Apps for Mobile Devices, archive from 2013 and before</h3>
 <ul>
+<li><b>WebOS: fosdem-webos</b><br />
+    <a href="http://forge.webpresso.net/projects/fosdem-webos">Website and source code</a>,<br />
+    Available from the <a href="https://developer.palm.com/appredirect/?packageid=net.webpresso.fosdem">HP App Catalog</a>,<br />
+    Direct <a href="http://forge.webpresso.net/attachments/download/33/net.webpresso.fosdem_0.2.11_all.ipk">ipk download</a>.<br />
+</li>
 <li><b>N9/N950: rzr fosdem-schedule</b><br />
     <a href="http://www.who.is.free.fr/wiki/doku.php?id=be#">Website (scroll a bit down for installation instructions)</a>,<br />
     <a href="https://build.pub.meego.com/package/show?package=fosdem-schedule&project=home%3Arzr%3Aharmattan">Source code</a>.<br />
