mobile: iPhone app works
Thanks Johan! :-)

--- a/content/schedule/mobile.html
+++ b/content/schedule/mobile.html
@@ -29,6 +29,10 @@ Ways to have the schedule with you at all times, without wasting trees:
     Available for Maemo in <a href="http://maemo.org/packages/view/sojourner/">extras-devel</a>,<br />
     Available as direct <a href="https://github.com/loomchild/sojourner/releases/download/v0.3.1/sojourner_0.3.1_all.deb">deb package</a>
 </li>
+<li><b>iPhone: fosdem-iphone</b><br />
+    <a href="https://github.com/johanhenselmans/fosdem/">Source code</a>,<br />
+    Available from <a href="https://itunes.apple.com/au/app/fosdem-org/id941904933?mt=8">the Apple app store</a>.<br />
+</li>
 </ul>
 
 <p>
