minor edit fixes and some additional instances where free software should be added alongside open source

--- a/content/about.html
+++ b/content/about.html
@@ -9,7 +9,7 @@ navtitle: About
   <div class="text-block">
     <h3>
         FOSDEM is a two-day event organised by volunteers to promote the
-        widespread use of open source and free software software.
+        widespread use of open source and free software.
     </h3>
     <p>
         Taking place in the beautiful city of
@@ -52,7 +52,7 @@ navtitle: About
   <div class="text-block">
     <h2>Developer rooms</h2>
     <p>
-      The FOSDEM team feels it is very important for open source and free software software
+      The FOSDEM team feels it is very important for open source and free software
       developers around the world to be able to meet in “real life”.
     </p>
     <p>
