--- a/content/index.html
+++ b/content/index.html
@@ -11,7 +11,7 @@ maxnews = @config.fetch(:news).fetch(:items_on_index_page).to_i
 %>
   <div class="s-block">
     <div class="text-block">
-      <h2>FOSDEM is a free event that offers open source communities a place to meet, share ideas and collaborate.</h2>
+      <h2>FOSDEM is a free event that offers open source and free software communities a place to meet, share ideas and collaborate.</h2>
       <p>It is renowned for being highly developer-oriented and brings together 5000+ geeks from all over the world.</p>
       <p class="btn-news"><a href="page:/about/#what">No registration necessary.</a></p>
     </div>
