index: update announcement block

--- a/content/index.html
+++ b/content/index.html
@@ -41,14 +41,10 @@ maxnews = @config.fetch(:news).fetch(:items_on_index_page).to_i
     # "s-block" div. pph 20141210
     %>
     <div class="announcement-block">
-      <h2>CALL FOR PARTICIPATION</h2>
+      <h2>All schedules are complete</h2>
       <p>
-        FOSDEM 2015 will take place at ULB Campus Solbosch on Saturday 31 January
-        and Sunday 1 February 2015.
+        FOSDEM 2015 is next weekend. All schedules are now complete.
       </p>
-      <p>
-      All deadlines for submitting proposals have passed.<br/>
-      Schedules will be announced in the coming days and weeks.
       </p>
       <p>We look forward to seeing everyone soon!</p>
     </div>
