--- a/content/schedule.html
+++ b/content/schedule.html
@@ -22,6 +22,7 @@ certs = events.select{|e| e[:type] == 'certification'}.sort_by{|e| e[:start_date
   <li>Timetables: 
     <%= l days %>
   </li>
+  <li>Printable <a href="https://tmp.fosdem.org/booklet-official/">PDFs</a></li>
   <li>Overview of <a href="<%= pathof '/schedule/roomtracks/' %>">rooms per days</a></li>
   <li>Mobile apps: <a href="<%= pathof '/schedule/mobile/' %>">many platforms</a></li>
 </ul>
