stands: Rename XBMC to Kodi.

--- a/content/stands.html
+++ b/content/stands.html
@@ -57,7 +57,7 @@ stands:
    - ReactOS: http://www.reactos.org/
    - Ultimaker: http://www.ultimaker.com/
    - WolfSSL: http://wolfssl.com/yaSSL/Home.html
-   - XBMC: http://xbmc.org/
+   - Kodi (formerly XBMC): http://kodi.tv/
   H (3):
    - O'Reilly Media: http://www.oreilly.com/
    - Job corner
