schedule updates on main page (only Saturday for now)

--- a/content/index.html
+++ b/content/index.html
@@ -41,12 +41,30 @@ maxnews = @config.fetch(:news).fetch(:items_on_index_page).to_i
     # "s-block" div. pph 20141210
     %>
     <div class="announcement-block">
-      <h2>All schedules are complete</h2>
+      <h2>It's FOSDEM time!</h2>
       <p>
-        FOSDEM 2015 is next weekend. All schedules are now complete.
+        Following schedule changes have been made after 26/01:
+        <h4>Saturday</h4>
+        <ul>
+          <li> Graph proc. devroom @ 14:00, cancelled 'From Open Street Map to...'
+          <li> IaaS devroom @ 18:00, new talk 'IaaS Devroom Panel'
+          <li> Java devroom @ 11:00, change of talk from 'Beyond Java 9' to 'Java 9: Make Way for Modules!'
+          <li> Network and SDN devroom @ 16:30, cancelled 'hardware switches'
+          <li> Perl devroom @ 15:35, change of talk from 'Life without plastic bags' to '"Fast enough" Perl 6'
+          <li> Python devroom @ 10:30, change of talk from 'TaskFlow' to 'Python and PostgreSQL, a wonderful wedding'
+          <li> Ruby devroom @ 16:30, new talk 'Inside RubyMotion'
+        </ul>
+        <!--
+        <h4>Sunday</h4>
+        <ul>
+          <li> Embedded devroom @ 11:30, change of talk from 'The connected playlist of everything' to 'Update on QtCreator for muC'
+          <li> Embedded devroom @ 15:00, cancelled 'Freedom Embedded'
+          <li> Java devroom @ 14:00, change of talk from 'Java 9: Make Way for Modules!' to 'Beyond Java 9'
+          <li> MySQL devroom @ 16:20, change of talk from 'ENOMEM' to 'Mysql and NoSQL - best of both worlds'
+          <li> Security devroom @ 13:30, new talk 'NetAidKit'
+        </ul>
+        -->
       </p>
-      </p>
-      <p>We look forward to seeing everyone soon!</p>
     </div>
   </div>
 
