main: unbreak after last announcement
 o Write in complete sentences.
 o Add correct punctuation.
 o Spell out dates.
 o Spell out 'at'.
 o Spell out 'developer room'.
 o Fix HTML syntax errors.

--- a/content/index.html
+++ b/content/index.html
@@ -41,18 +41,18 @@ maxnews = @config.fetch(:news).fetch(:items_on_index_page).to_i
     # "s-block" div. pph 20141210
     %>
     <div class="announcement-block">
-      <h2>It's FOSDEM time!</h2>
+      <h2>FOSDEM is now!</h2>
       <p>
-        Following schedule changes have been made after 26/01:
+        The following schedule changes have been made after 26 January 2015:
         <h4>Saturday</h4>
         <ul>
-          <li> Graph proc. devroom @ 14:00, cancelled 'From Open Street Map to...'
-          <li> IaaS devroom @ 18:00, new talk 'IaaS Devroom Panel'
-          <li> Java devroom @ 11:00, change of talk from 'Beyond Java 9' to 'Java 9: Make Way for Modules!'
-          <li> Network and SDN devroom @ 16:30, cancelled 'hardware switches'
-          <li> Perl devroom @ 15:35, change of talk from 'Life without plastic bags' to '"Fast enough" Perl 6'
-          <li> Python devroom @ 10:30, change of talk from 'TaskFlow' to 'Python and PostgreSQL, a wonderful wedding'
-          <li> Ruby devroom @ 16:30, new talk 'Inside RubyMotion'
+	<li>Graph processing developer room at 14:00:<br/>cancelled <em>From Open Street Map to...</em>.</li>
+	<li>Infrastructure as a Service developer room at 18:00:<br/>added <em>IaaS Devroom Panel</em>.</li>
+	<li>Java developer room at 11:00:<br/><em>Java 9: Make Way for Modules!</em> replaces <em>Beyond Java 9</em>.</li>
+	<li>Networking and SDN developer room at 16:30:<br/>cancelled <em>hardware switches</em>.</li>
+	<li>Perl developer at 15:35:<br/><em>"Fast enough" Perl 6</em> replaces <em>Life without plastic bags</em>.</li>
+	<li>Python developer at 10:30:<br/><em>Python and PostgreSQL, a wonderful wedding</em> replaces <em>TaskFlow</em>.</li>
+	<li>Ruby developer room at 16:30:<br/>added <em>Inside RubyMotion</em>.</li>
         </ul>
         <!--
         <h4>Sunday</h4>
