--- a/content/about.html
+++ b/content/about.html
@@ -9,12 +9,12 @@ navtitle: About
   <div class="text-block">
     <h3>
         FOSDEM is a two-day event organised by volunteers to promote the
-        widespread use of open source software.
+        widespread use of free and open source software.
     </h3>
     <p>
         Taking place in the beautiful city of
         <a href="page:practical/transportation">Brussels (Belgium)</a>, FOSDEM
-        is widely recognised as <q>the best open source conference in Europe</q>.
+        is widely recognised as the best such conference in Europe.
     </p>
   </div>
 </div>
@@ -24,7 +24,7 @@ navtitle: About
       <h2>What is FOSDEM?<a name="what">&nbsp;</a></h2>
       <p>
         FOSDEM is a free and non-commercial event organised by the community for
-        the community.  The goal is to provide open source software developers
+        the community.  The goal is to provide free and open source software developers
         and communities a place to meet to:
 
         <ul class="info-list">
@@ -32,14 +32,17 @@ navtitle: About
             get in touch with other developers and projects;
           </li>
           <li>
+            be informed about the latest developments in the free software world;
+          </li>
+          <li>
             be informed about the latest developments in the open source world;
           </li>
           <li>
             attend interesting talks and presentations on various topics by
-            open source project leaders and committers;
+            project leaders and committers;
           </li>
           <li>
-            to promote the development and the benefits of open source
+            to promote the development and benefits of free software and open source
             solutions.
           </li>
         </ul>
@@ -52,7 +55,7 @@ navtitle: About
   <div class="text-block">
     <h2>Developer rooms</h2>
     <p>
-      The FOSDEM team feels it is very important for open source software
+      The FOSDEM team feels it is very important for free and open source software
       developers around the world to be able to meet in “real life”.
     </p>
     <p>
@@ -62,11 +65,6 @@ navtitle: About
       and publicly present latest directions, lightning talks, news and
       discussions.
       We believe developers can benefit a lot from these meetings.
-    </p>
-    <p>
-      Last year, there were more than 160 talks in the Developer Rooms in
-      addition to the many main-track talks, the lightning talks, the LPI
-      exams and the PGP/CAcert keysigning events.
     </p>
   </div>
   <div class="text-block">
@@ -89,8 +87,8 @@ navtitle: About
     <p>
       For the second year, OSDEM was renamed FOSDEM. And now, many years later,
       it has grown into the event it is today.
-      We now try to cover a wide spectrum of open source projects, and offer a
-      platform for people to collaborate in the true open source spirit.  Every
+      We now try to cover a wide spectrum of free and open source software projects, and offer a
+      platform for people to collaborate.  Every
       year, we host more than 5000 developers at the ULB Solbosch campus.
     </p>
 
