add sunday schedule changes

--- a/content/index.html
+++ b/content/index.html
@@ -43,27 +43,16 @@ maxnews = @config.fetch(:news).fetch(:items_on_index_page).to_i
     <div class="announcement-block">
       <h2>FOSDEM is now!</h2>
       <p>
-        The following schedule changes have been made after 26 January 2015:
-        <h4>Saturday</h4>
-        <ul>
-	<li>Graph processing developer room at 14:00:<br/>cancelled <em>From Open Street Map to...</em>.</li>
-	<li>Infrastructure as a Service developer room at 18:00:<br/>added <em>IaaS Devroom Panel</em>.</li>
-	<li>Java developer room at 11:00:<br/><em>Java 9: Make Way for Modules!</em> replaces <em>Beyond Java 9</em>.</li>
-	<li>Networking and SDN developer room at 16:30:<br/>cancelled <em>hardware switches</em>.</li>
-	<li>Perl developer at 15:35:<br/><em>"Fast enough" Perl 6</em> replaces <em>Life without plastic bags</em>.</li>
-	<li>Python developer at 10:30:<br/><em>Python and PostgreSQL, a wonderful wedding</em> replaces <em>TaskFlow</em>.</li>
-	<li>Ruby developer room at 16:30:<br/>added <em>Inside RubyMotion</em>.</li>
-        </ul>
-        <!--
+        The following schedule changes have been made after the booklet was printed:
         <h4>Sunday</h4>
         <ul>
           <li> Embedded devroom @ 11:30, change of talk from 'The connected playlist of everything' to 'Update on QtCreator for muC'
-          <li> Embedded devroom @ 15:00, cancelled 'Freedom Embedded'
           <li> Java devroom @ 14:00, change of talk from 'Java 9: Make Way for Modules!' to 'Beyond Java 9'
+          <li> LLVM devroom @ 10:40, change of talk from 'ARM code quality' to 'LLVMs AArch64 support - history &amp; status'
+          <li> LLVM devroom @ 14:30, change of talk from 'LLVMs AArch64 support' to 'Adventures with LLVM in a magical land where pointers are not integers'
           <li> MySQL devroom @ 16:20, change of talk from 'ENOMEM' to 'Mysql and NoSQL - best of both worlds'
           <li> Security devroom @ 13:30, new talk 'NetAidKit'
         </ul>
-        -->
       </p>
     </div>
   </div>
