--- a/content/index.html
+++ b/content/index.html
@@ -11,8 +11,8 @@ maxnews = @config.fetch(:news).fetch(:items_on_index_page).to_i
 %>
   <div class="s-block">
     <div class="text-block">
-      <h2>FOSDEM is a free event that offers open source communities a place to meet, share ideas and collaborate.</h2>
-      <p>It is renowned for being highly developer-oriented and brings together 5000+ geeks from all over the world.</p>
+      <h2>FOSDEM is a free event for software developers to meet, share ideas and collaborate.</h2>
+      <p>Every year, thousands of developers of free and open source software from all over the world gather at the event in Brussels.</p>
       <p class="btn-news"><a href="page:practical">No registration necessary.</a></p>
     </div>
     <div class="logo-block">
