--- a/content/index.html
+++ b/content/index.html
@@ -41,18 +41,17 @@ maxnews = @config.fetch(:news).fetch(:items_on_index_page).to_i
     # "s-block" div. pph 20141210
     %>
     <div class="announcement-block">
-      <h2>FOSDEM is now!</h2>
+      <h2>FOSDEM is over for another year!</h2>
       <p>
-        The following schedule changes have been made after the booklet was printed:
-        <h4>Sunday</h4>
-        <ul>
-          <li> Embedded devroom @ 11:30, change of talk from 'The connected playlist of everything' to 'Update on QtCreator for muC'
-          <li> Java devroom @ 14:00, change of talk from 'Java 9: Make Way for Modules!' to 'Beyond Java 9'
-          <li> LLVM devroom @ 10:40, change of talk from 'ARM code quality' to 'LLVMs AArch64 support - history &amp; status'
-          <li> LLVM devroom @ 14:30, change of talk from 'LLVMs AArch64 support' to 'Adventures with LLVM in a magical land where pointers are not integers'
-          <li> MySQL devroom @ 16:20, change of talk from 'ENOMEM' to 'Mysql and NoSQL - best of both worlds'
-          <li> Security devroom @ 13:30, new talk 'NetAidKit'
-        </ul>
+	We would like to thank everyone for their contribution to another successful FOSDEM!
+      </p>
+      <p>
+	Please tell us about your FOSDEM experience at 
+	<a href="mailto:feedback@fosdem.org">feedback@fosdem.org</a>.
+	All your feedback and suggestions for next year will be greatly appreciated.
+      </p>
+      <p>
+	We're looking forward to meeting you again in 2016!
       </p>
     </div>
   </div>
