main: Mention video recording links.

--- a/content/index.html
+++ b/content/index.html
@@ -53,6 +53,10 @@ maxnews = @config.fetch(:news).fetch(:items_on_index_page).to_i
       <p>
 	We're looking forward to meeting you again in 2016!
       </p>
+      <h2>Video Recordings</h2>
+      <p>
+	Many of the individual <a href="https://fosdem.org/2015/schedule/events/">event pages</a> now have links to <a href="http://video.fosdem.org/2015/">video recordings</a> of the talks.
+      </p>
     </div>
   </div>
 
