about: Update team list.

--- a/content/about.html
+++ b/content/about.html
@@ -104,24 +104,25 @@ navtitle: About
     <ul>
       <li>Gerry Demaret</li>
       <li>Michael De Swert</li>
+      <li>Philippe De Swert</li>
       <li>Geert Goossens</li>
-      <li>Tias Guns</li>
       <li>Jan Gyselinck</li>
       <li>Richard Hartmann</li>
-      <li>Kate Howlett</li>
       <li>Job Joossen</li>
       <li>Alasdair Kergon</li>
       <li>Daniele Lacamera</li>
       <li>Niels Laukens</li>
       <li>Koert Loret</li>
       <li>Jan-Frederik Martens</li>
-      <li>Philip Paeps</li>
       <li>Juan Rial</li>
       <li>Stella Rouzi</li>
+      <li>Sebastian Schauenburg</li>
+      <li>Johan van Selst</li>
       <li>Wouter Simons</li>
       <li>Wynke Stulemeijer</li>
       <li>Mark Van den Borre</li>
-      <li>Koen Vervloesem</li>
+      <li>Wouter Verhelst</li>
+      <li>Jaron Viëtor</li>
       <li>Bart Weijs</li>
       <li>The many volunteers who help out during the weekend</li>
       <li>...</li>
