about: Encode Jaron's name.

--- a/content/about.html
+++ b/content/about.html
@@ -122,7 +122,7 @@ navtitle: About
       <li>Wynke Stulemeijer</li>
       <li>Mark Van den Borre</li>
       <li>Wouter Verhelst</li>
-      <li>Jaron Viëtor</li>
+      <li>Jaron Vi&euml;tor</li>
       <li>Bart Weijs</li>
       <li>The many volunteers who help out during the weekend</li>
       <li>...</li>
