accommodation: include FunKey offer

--- a/content/practical/accommodation.html
+++ b/content/practical/accommodation.html
@@ -17,6 +17,92 @@ places to stay.</p>
   Brussels has a large selection of hotels in every price range.
 </p>
 
+<a name="hotels-funkey"></a><h3>FunKey</h3>
+<p>
+  Like previous year, FunKey Hotel is offering special rates for FOSDEM
+  2016 attendees. Bookings have been closed for non-FOSDEM attendees, so
+  FOSDEM guests will be able to use the common spaces of the hotel
+  (breakfast room, meeting rooms, ...) at their leisure during their stay.
+</p>
+
+<p>
+  Their offer includes the following:
+
+  <ul>
+    <li>28 Euro per bed, per night</li>
+    <li>Breakfast</li>
+    <li>Wireless network</li>
+    <li>24/7 snacking and beverages (including an extensive selection of beers)</li>
+    <li>Free parking</li>
+    <li>The use of their Chromebook laptops</li>
+    <li>The use of their mobile phones (with unlimited calls in Belgium)</li>
+  </ul>
+</p>
+
+<p>
+  They have the following fully equipped rooms available:
+
+  <ul>
+    <li>double rooms</li>
+    <li>triple rooms</li>
+  </ul>
+</p>
+
+<p>
+  Please notice that roughly half of the rooms have already been booked,
+  so if you are interested you should book as early as possible.
+</p>
+
+<p>
+  The offer of 28EUR/bed/night is valid for Friday, Saturday and Sunday night.
+</p>
+
+<p>
+  Please try to book as groups of 2, 3, or 4 friends or colleagues. It is
+  also possible to book just one bed and share a room with people you
+  don't know.
+</p>
+
+<p>
+  If you are interested, all you have to do is send an e-mail to Guillaume
+  at <a href="mailto:guillaume@funkeyhotel.com">guillaume@funkeyhotel.com</a>,
+  indicating:
+
+  <ul>
+    <li>Your name(s)</li>
+    <li>How many beds you wish to book</li>
+    <li>The nights you wish to book</li>
+  </ul>
+</p>
+
+<p>
+  People wishing to book at least 2 nights have priority until 2015-10-01.
+  This means that 1 night only bookings will only be confirmed after this
+  date. Bookings for at least 2 nights can be paid immediately and will
+  be instantly confirmed.
+</p>
+
+<p>
+  Payment must be made in advance and is nonrefundable. Guillaume will
+  send you details on how to proceed after you have e-mailed him. You will
+  have the possibility of paying either online with Visa, MasterCard or
+  Bancontact (no American Express, Carte Bleue, Visa Electron or others)
+  or by IBAN.
+</p>
+
+<p>
+  You can learn more about the FunKey hotel here:
+  <a href="http://funkeyhotel.com">http://funkeyhotel.com</a>
+  If you have any questions about this offer, please direct them to
+  Guillaume at <a href="mailto:guillaume@funkeyhotel.com">guillaume@funkeyhotel.com</a>.
+</p>
+
+<p>
+  Please note that this is an offer from a third party extended to FOSDEM
+  attendees. FOSDEM organisers have no relationship with FunKey. We only
+  forward their offer to our attendees.
+</p>
+
 <h2>CouchSurfing / BeWelcome</h2>
 <p>Are you looking for a couch or do you maybe have one to offer?
 Join the FOSDEM <a target="_new" href="https://www.couchsurfing.com/groups/16380">CouchSurfing</a>
