contact: reflect reality

--- a/content/contact.html
+++ b/content/contact.html
@@ -14,8 +14,7 @@ title: Contact
 
 <p>For sponsorship inquiries <u><b>only</b></u>, please contact:</p>
 <ul>
-    <li><a href="mailto:sponsors@fosdem.org">sponsors@fosdem.org</a> (preferred)</li>
-    <li>Philip Paeps, <span class="tel">+32 486 114 720</span>, <a href="mailto:philip@fosdem.org">philip@fosdem.org</a> (NL, EN, FR)</li>
+    <li><a href="mailto:sponsors@fosdem.org">sponsors@fosdem.org</a></li>
 </ul>
 
 <p>For press inquiries <u><b>only</b></u>, please contact:</p>
