accommodation: only triple rooms left at FunKey

--- a/content/practical/accommodation.html
+++ b/content/practical/accommodation.html
@@ -40,7 +40,7 @@ places to stay.</p>
 </p>
 
 <p>
-  Please note that there are only 12 double rooms left as of October 22nd.
+  Please note that there are only 12 triple rooms left as of October 22nd.
   If you are interested, you should book as early as possible.
 </p>
 
