--- a/content/schedule.html
+++ b/content/schedule.html
@@ -293,3 +293,7 @@ The schedule data is available in:
 <li><a href="<%= pathof '/schedule/xcal/' %>">xCal</a>
 </ul>
 </p>
+
+<p>
+This information was last updated on <%= @item.mtime.strftime("%A %B %d, %Y at %H:%M:%S %Z") %>.
+</p>
