schedule: Move timestamp to complete events page.

--- a/content/schedule/events.html
+++ b/content/schedule/events.html
@@ -43,3 +43,7 @@ size = h.values.map(&:size).inject(:+)
         <% end %>
     </tbody>
 </table>
+
+<p>
+This information was last updated on <%= @item.mtime.strftime("%A %B %d, %Y at %H:%M:%S %Z") %>.
+</p>
