Add FOSDEM Code of Conduct (to section: practical information)

--- a/content/practical/index.html
+++ b/content/practical/index.html
@@ -42,6 +42,14 @@ navcat: true
   seating in presentations.
 </p>
 
+<a name="conduct"></a>
+<h3>Code of Conduct</h3>
+<p>
+  In order to keep FOSDEM a fun, interesting and positive experience for
+  everybody, we expect participants to follow the
+  <a href="page:practical/conduct">FOSDEM Code of Conduct</a>.
+</p>
+
 <a name="other"></a>
 <h3>Further information</h3>
 <p>
