CoC: minor change

--- a/content/practical/conduct.html
+++ b/content/practical/conduct.html
@@ -51,7 +51,7 @@ title: Code of Conduct
 
 <ul>
 <li>E-mail: <a href="mailto:conduct@fosdem.org">conduct@fosdem.org</a>
-<li>Mobile telephone (during the event only): <em>to be announced</em>
+<li>Phone (during the event only): <em>to be announced</em>
 <li>Or ask any staff member during the event to help you locate a team member.
 </ul>
 
