Fix links to map services
Both the Google Maps link and the Open Street Map link didn't work
very well. (They only zoomed to the area, not pinpoint it. That
causes problems with e.g. Google that redirects you to
maps.google.COUNTRY, which looses the zoom).

Removed Yahoo, since that link didn't work at all

--- a/content/practical/transportation.html
+++ b/content/practical/transportation.html
@@ -25,9 +25,8 @@ sponsors_under_navigation: true
 </p>
 
 <ul class="unstyled">
-  <li><i class="icon-map-marker"></i> <a target="_blank" href="http://maps.google.com/maps?ie=UTF8&amp;z=17&amp;ll=50.812375,4.380734&amp;spn=0.005369,0.011373&amp;om=1">Google Maps</a></li>
-  <li><i class="icon-map-marker"></i> <a target="_blank" href="http://openstreetmap.org/?lat=50.81259&amp;lon=4.38137&amp;zoom=17&amp;layers=00B0FTF">OpenStreetMap</a></li>
-  <li><i class="icon-map-marker"></i> <a target="_blank" href="http://maps.yahoo.com/#q=Paul+H%C3%A9gerlaan+2%2C+1000+Brussels%2C+Belgium&conf=1&start=1&lat=50.81282&lon=4.380622&zoom=17&mvt=m&trf=0&tt=">Yahoo! Maps</a></li>
+  <li><i class="icon-map-marker"></i> <a target="_blank" href="http://maps.google.com/?q=50.812375%204.38073">Google Maps</a></li>
+  <li><i class="icon-map-marker"></i> <a target="_blank" href="http://www.openstreetmap.org/?mlat=50.812375&mlon=4.38073">OpenStreetMap</a></li>
 </ul>
 
 <p>
