fringe: Add FOSDEM Fringe.

--- a/content/schedule.html
+++ b/content/schedule.html
@@ -284,6 +284,15 @@ certs = events.select{|e| e[:type] == 'certification'}.sort_by{|e| e[:start_date
   <p><span class="label label-info">Certification exams have not been scheduled yet.</span></p>
 <% end %>
 
+<a name="fringe"></a>
+<h3> The FOSDEM Fringe</h3>
+<p>
+  New in 2016, the FOSDEM Fringe consists of independent events involving free and open source software taking place in the days around the FOSDEM weekend.  Why not extend your trip?
+</p>
+<p>
+  Further details are available on the <a href="page:/fringe/">FOSDEM Fringe page</a>.
+</p>
+
 <h3>Raw schedule data</h3>
 <p>
 The schedule data is available in:
