--- a/content/stands.html
+++ b/content/stands.html
@@ -1,67 +1,69 @@
 ---
 # vim: set ts=2 sw=2 et ai ft=eruby:
+
+# Use the format:   - Stand name: URL
 title: Stands
 stands:
   K [level 1] (21):
-   - CentOS: http://www.centos.org
-   - Debian: http://www.debian.org/
-   - Diaspora: https://diasporafoundation.org/
-   - Enlightenment: http://www.enlightenment.org
-   - FSFE: http://fsfe.org/
-   - Fedora: http://www.fedoraproject.org
-   - GNOME: http://gnome.org
-   - Hack the Knit: http://www.constantvzw.org/
-   - KDE: http://www.kde.org
-   - Libre Graphics magazine: http://libregraphicsmag.com
-   - Mageia: http://mageia.org
-   - Mozilla: http://www.mozilla.org/
-   - OpenMandriva: http://openmandriva.org
-   - OpenStack: http://openstack.org
-   - OwnCloud: http://owncloud.org/
-   - openSUSE: http://www.opensuse.org
-   - oVirt: http://ovirt.org
-   - Puppet: http://puppetlabs.com/
-   - Tor Project: https://torproject.org/
-   - Wikimedia: https://www.mediawiki.org/wiki/MediaWiki
-   - Xen: http://xenproject.org/
+   - 
+   - 
+   - 
+   - 
+   - 
+   - 
+   - 
+   - 
+   - 
+   - 
+   - 
+   - 
+   - 
+   - 
+   - 
+   - 
+   - 
+   - 
+   - 
+   - 
+   - 
 
   K [level 2] (19):
-   - Agora Voting: http://agoravoting.org/
-   - Apache OpenOffice: http://openoffice.org
-   - DoudouLinux: http://www.doudoulinux.org/
-   - Eclipse: http://eclipse.org
-   - ElasticSearch: http://elasticsearch.org
-   - GsoC: http://google-melange.com
-   - Illumos: http://www.illumos.org/
-   - Jabber: http://jabber.org/
-   - Jenkins: https://jenkins-ci.org
-   - Jitsi: https://jitsi.org
-   - Kolab, MyKolab, Roundcube: http://mykolab.com
-   - LibreOffice: http://www.libreoffice.org
-   - Matrix: http://matrix.org/
-   - MySQL Community: http://www.mysql.com/
-   - NixOS: http://nixos.org/
-   - OpenUI5: http://openui5.org/
-   - Perl Programming Language community: http://www.perl.org/
-   - Python: http://python.org/
-   - XMMP: http://xmpp.org/
+   - 
+   - 
+   - 
+   - 
+   - 
+   - 
+   - 
+   - 
+   - 
+   - 
+   - 
+   - 
+   - 
+   - 
+   - 
+   - 
+   - 
+   - 
+   - 
   AW (12):
-   - CAcert: http://cacert.org
-   - CoreBoot + Flashrom: http://www.coreboot.org/
-   - CoreOS: https://coreos.com/
-   - DIYBookScanner: https://github.com/DIYBookScanner/spreads
-   - GNURadio: http://gnuradio.org/
-   - OpenEmbedded: http://www.openembedded.org
-   - PicoTCP: http://www.picotcp.com/
-   - PostgreSQL: http://www.postgresql.org/
-   - ReactOS: http://www.reactos.org/
-   - Ultimaker: http://www.ultimaker.com/
-   - WolfSSL: http://wolfssl.com/yaSSL/Home.html
-   - Kodi (formerly XBMC): http://kodi.tv/
+   - 
+   - 
+   - 
+   - 
+   - 
+   - 
+   - 
+   - 
+   - 
+   - 
+   - 
+   - 
   H (3):
-   - O'Reilly Media: http://www.oreilly.com/
-   - Job corner
-   - Announcements corner
+   - 
+   - 
+   - 
 ---
 <%
   # parse stands meta
@@ -113,6 +115,11 @@ stands:
 Stands can be used to share information, demo software, sell merchandising,
 give away goodies and so forth, and to present themselves to the visitors
 in a more personal fashion.
+</p>
+<p>
+<span class="label label-info">
+The list of accepted stands for FOSDEM 2016 has not yet been published!
+</span>
 </p>
 <p>
 There are stands in the following <%= l('/schedule/buildings/', 'buildings') %>:
