--- a/content/contact.html
+++ b/content/contact.html
@@ -12,6 +12,8 @@ title: Contact
 
 <p>Visitors interested in helping out during the event can register for the <a href="http://lists.fosdem.org/mailman/listinfo/volunteers">volunteers</a> mailing list, where all communication between and coordination of volunteers takes place.</p>
 
+<p>The legal entity behind FOSDEM is &quot;FOSDEM VZW&quot;, a not-for-profit under Belgian law with company registration number &quot;BE 0477.085.590&quot;.</p>
+
 <p>For sponsorship inquiries <u><b>only</b></u>, please contact:</p>
 <ul>
     <li><a href="mailto:sponsors@fosdem.org">sponsors@fosdem.org</a></li>
