news: Remove call for participation from front page.

--- a/content/index.html
+++ b/content/index.html
@@ -42,11 +42,10 @@ maxnews = @config.fetch(:news).fetch(:items_on_index_page).to_i
     %>
 
     <div class="announcement-block">
-      <h2>FOSDEM 2016: 30 &amp; 31 January 2016 - Call for Participation</h2>
+      <h2>FOSDEM 2016 &mdash; 30 &amp; 31 January 2016</h2>
       <p>
         FOSDEM 2016 will take place at ULB Campus Solbosch on Saturday 30 and
-        Sunday 31 January 2016.<br/>
-        We are pleased to announce this year's <a href="/2016/news/2015-09-24-call-for-participation/">Call for Participation</a>.
+        Sunday 31 January 2016.
       </p>
     </div>
   </div>
