mobile: add Windows Phone app

--- a/content/schedule/mobile.html
+++ b/content/schedule/mobile.html
@@ -7,7 +7,21 @@ sponsors_under_navigation: true
 %>
 Ways to have the schedule with you at all times, without wasting trees: 
 
-<h3>Apps for Mobile Devices, tested for 2015</h3>
+<h3>Apps for Mobile Devices, tested for 2016</h3>
+<ul>
+<li><b>Windows Phone</b><br />
+    <a href="https://github.com/julianls/FOSDEM">Source code</a>,<br />
+    Available from the <a href="https://www.microsoft.com/en-us/store/apps/fosdem/9nblggh5j4kd">Microsoft store</a>.<br />
+</li>
+</ul>
+
+<p>
+Others? Or tested one of the below for this year? Let us know on our mailinglist: <a href="mailto:fosdem@lists.fosdem.org">fosdem@lists.fosdem.org</a>.
+</p>
+
+<hr />
+
+<h3>Apps for Mobile Devices, tested for 2015, unknown for 2016</h3>
 <ul>
 <li><b>Android: FOSDEM Companion</b><br />
     <a href="https://github.com/cbeyls/fosdem-companion-android">Source code</a>,<br />
@@ -35,13 +49,7 @@ Ways to have the schedule with you at all times, without wasting trees:
 </li>
 </ul>
 
-<p>
-Others? Or tested one of the below for this year? Let us know on our mailinglist: <a href="mailto:fosdem@lists.fosdem.org">fosdem@lists.fosdem.org</a>.
-</p>
-
-<hr />
-
-<h3>Apps for Mobile Devices, tested for 2014, unknown for 2015</h3>
+<h3>Apps for Mobile Devices, archive from 2014 and before</h3>
 <ul>
 <li><b>Android: fosdem-android</b><br />
     <a href="https://sourceforge.net/projects/fosdem-android">Source code</a>,<br />
@@ -53,10 +61,6 @@ Others? Or tested one of the below for this year? Let us know on our mailinglist
     <a href="https://github.com/leonhandreke/fosdem">Source code</a>,<br />
     Available from <a href="https://itunes.apple.com/gb/app/fosdem/id595196580?mt=8">the Apple market</a>.<br />
 </li>
-</ul>
-
-<h3>Apps for Mobile Devices, archive from 2013 and before</h3>
-<ul>
 <li><b>WebOS: fosdem-webos</b><br />
     <a href="http://forge.webpresso.net/projects/fosdem-webos">Website and source code</a>,<br />
     Available from the <a href="https://developer.palm.com/appredirect/?packageid=net.webpresso.fosdem">HP App Catalog</a>,<br />
